--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         <a class="nav-link" href="cuerpo.html">Dibujos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Creaciones con Gis</a>
+                        <a class="nav-link" href="paginas/dibujosGis.html">Creaciones con Gis</a>
                     </li>    
                 </ul>
             </div> 
@@ -83,7 +83,7 @@
                             <a class="nav-link " href="paginas/dibujos.html">Dibujos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link disabled" href="#">Creaciones con Gis</a>
+                            <a class="nav-link disabled" href="paginas/dibujosGis.html">Creaciones con Gis</a>
                         </li>
                     </ul>
                 </div>
