--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         <a class="nav-link" href="paginas/esculturas.html">Esculturas</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="cuerpo.html">Dibujos</a>
+                        <a class="nav-link" href="paginas/dibujos.html">Dibujos</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="paginas/dibujosGis.html">Creaciones con Gis</a>
