--- a/paginas/dibujosGis.html
+++ b/paginas/dibujosGis.html
@@ -62,7 +62,7 @@
                   	  <a class="nav-link" href="../paginas/dibujos.html">Dibujos</a>
                		</li>
                 	<li class="nav-item">
-                    	<a class="nav-link" href="../paginas/dibujosGis.html">Dibujos con Gis</a>
+                    	<a class="nav-link" href="../paginas/dibujosGis.html">Creaciones con Gis</a>
                 	</li>    
            		</ul>
        		</div> 
@@ -82,7 +82,7 @@
                         	<a class="nav-link " href="../paginas/dibujos.html">Dibujos</a>
                     	</li>
                     	<li class="nav-item">
-                        	<a class="nav-link active " href="../paginas/dibujosGis.html">Dibujos con Gis</a>
+                        	<a class="nav-link active " href="../paginas/dibujosGis.html">Creaciones con Gis</a>
                     	</li>
                		</ul>
             	</div>
@@ -130,7 +130,7 @@
 
     	<footer class ="p-5 bg-warning text-center">
         	<a style="font-family:Lucida Handwriting">
-                <b>Lo mejor de la vida viene cuando la vives y disfruas como niño.</b>
+                <b>Lo mejor de la vida viene cuando la vives y disfruas como niÃ±o.</b>
             </a>
     	</footer>
 
