--- a/paginas/esculturas.html
+++ b/paginas/esculturas.html
@@ -83,7 +83,7 @@
                             <a class="nav-link " href="../paginas/dibujos.html">Dibujos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link disabled" href="../paginas/dibujosGis.html">Creaciones con Gis</a>
+                            <a class="nav-link " href="../paginas/dibujosGis.html">Creaciones con Gis</a>
                         </li>
                     </ul>
                 </div>
