--- a/paginas/esculturas.html
+++ b/paginas/esculturas.html
@@ -24,14 +24,16 @@
                 height: 25%;
             }
 
-            .imagenes img{
-                width:300px;
-                height:200px;
-            }
-            .imagenes2 div.img{
-                width:"100%";
-                height:"auto";
-            }
+            div.polaroid {
+  				box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  				margin-bottom: 25px;
+  								
+			}
+			
+			img:hover {
+  				box-shadow: 0 5px 10px 20px rgb(247, 147, 84);
+  				
+			
 
         </style>
 
@@ -89,40 +91,40 @@
                 </div>
                 <div class="col border border-5 p-5 ms-3 text-start align-center" style="background:#ccccff;">
                         <div class="row">
-                            <div class="col p-1 text-center">
+                            <div class="col p-1 text-center polaroid">
                                 <img src="../imagenes/esculturas/cocodrilo.jpg" class="rounded" width="304" height="236" class="center">
                             </div>
-                            <div class="col p-1 text-center">
+                            <div class="col p-1 text-center polaroid">
                                 <img src="../imagenes/esculturas/das.jpg" class="rounded" width="304" height="236">
                             </div>
-                            <div class="col p-1 text-center">
+                            <div class="col p-1 text-center polaroid">
                                 <img src="../imagenes/esculturas/humacornio.jpg" class="rounded" width="304" height="236">
                             </div>
-                            <div class="col p-1 text-center" >
+                            <div class="col p-1 text-center polaroid" >
                                 <img src="../imagenes/esculturas/lindominus.jpg" class="rounded" width="304" height="236">
                             </div>
-                            <div class="col p-1 text-center">
+                            <div class="col p-1 text-center polaroid">
                                 <img src="../imagenes/esculturas/lindominus2.jpg" class="rounded" width="304" height="236">
                             </div>
-                            <div class="col p-1 text-center">
+                            <div class="col p-1 text-center polaroid">
                                 <img src="../imagenes/esculturas/mecagodzila.jpg" class="rounded" width="304" height="236">
                             </div>
-                            <div class="col p-1 text-center">
+                            <div class="col p-1 text-center polaroid">
                                 <img src="../imagenes/esculturas/milo.jpg" class="rounded" width="304" height="236">
                             </div>
-                            <div class="col p-1 text-center">
+                            <div class="col p-1 text-center polaroid">
                                 <img src="../imagenes/esculturas/minidragon.jpg" class="rounded" width="304" height="236">
                             </div>
-                            <div class="col p-1 text-center">
+                            <div class="col p-1 text-center polaroid">
                                 <img src="../imagenes/esculturas/miutu.jpg" class="rounded" width="304" height="236">
                             </div>
-                            <div class="col p-1 text-center">
+                            <div class="col p-1 text-center polaroid">
                                 <img src="../imagenes/esculturas/oso.jpg" class="rounded" width="304" height="236">
                             </div>
-                            <div class="col p-1 text-center">
+                            <div class="col p-1 text-center polaroid">
                                 <img src="../imagenes/esculturas/perro.jpg" class="rounded" width="304" height="236">
                             </div>
-                            <div class="col p-1 text-center">
+                            <div class="col p-1 text-center polaroid">
                                 <img src="../imagenes/esculturas/pigisfriends.jpg" class="rounded" width="304" height="236">
                             </div>
                         </div>
