--- a/paginas/esculturas.html
+++ b/paginas/esculturas.html
@@ -92,7 +92,9 @@
                 <div class="col border border-5 p-5 ms-3 text-start align-center" style="background:#ccccff;">
                         <div class="row">
                             <div class="col p-1 text-center polaroid">
-                                <img src="../imagenes/esculturas/cocodrilo.jpg" class="rounded" width="304" height="236" class="center">
+				<a href="../imagenes/esculturas/cocodrilo.jpg">    
+                                	<img src="../imagenes/esculturas/cocodrilo.jpg" class="rounded" width="304" height="236" class="center">
+				</a>	
                             </div>
                             <div class="col p-1 text-center polaroid">
                                 <img src="../imagenes/esculturas/das.jpg" class="rounded" width="304" height="236">
