--- a/paginas/esculturas.html
+++ b/paginas/esculturas.html
@@ -89,7 +89,7 @@
                         </li>
                     </ul>
                 </div>
-                <div class="col border border-5 p-5 ms-3 text-start align-center" style="background:#ccccff;">
+                <div class="col-11 border border-5 p-5 ms-3 text-start align-center" style="background:#ccccff;">
                         <div class="row">
                             <div class="col p-1 text-center polaroid">
 				<a href="../imagenes/esculturas/cocodrilo.jpg">    
