--- a/paginas/esculturas.html
+++ b/paginas/esculturas.html
@@ -90,7 +90,7 @@
                         <div class="row">
                             <div class="col p-1 text-center polaroid">
 				<a href="../imagenes/esculturas/cocodrilo.jpg">    
-                                	<img src="../imagenes/esculturas/cocodrilo.jpg" class="rounded" width="304" height="236" class="center">
+                                	<img src="../imagenes/esculturas/cocodrilo.jpg" class="rounded" width="304" height="236">
 				</a>	
                             </div>
                             <div class="col p-1 text-center polaroid">
