--- a/paginas/esculturas.html
+++ b/paginas/esculturas.html
@@ -88,62 +88,62 @@
                 </div>
                 <div class="col p-5 ms-3 text-start align-center" style="background:#ccccff;">
                         <div class="row">
-                            <div class="col p-1 text-center polaroid">
+                            <div class="col p-1 text-center ">
 				<a href="../imagenes/esculturas/cocodrilo.jpg">    
                                 	<img src="../imagenes/esculturas/cocodrilo.jpg" class="rounded" width="304" height="236">
 				</a>	
                             </div>
-                            <div class="col p-1 text-center polaroid">
+                            <div class="col p-1 text-center ">
 				 <a href="../imagenes/esculturas/das.jpg">   
                                 	<img src="../imagenes/esculturas/das.jpg" class="rounded" width="304" height="236">
 				 </a>	 
                             </div>
-                            <div class="col p-1 text-center polaroid">
+                            <div class="col p-1 text-center ">
 				  <a href="../imagenes/esculturas/humacornio.jpg>  
                                 	<img src="../imagenes/esculturas/humacornio.jpg" class="rounded" width="304" height="236">
 				  </a>  
                             </div>
-                            <div class="col p-1 text-center polaroid" >
+                            <div class="col p-1 text-center " >
 				  <a href="../imagenes/esculturas/lindominus.jpg">				     
                                 	<img src="../imagenes/esculturas/lindominus.jpg" class="rounded" width="304" height="236">
 				  </a>											 
                             </div>
-                            <div class="col p-1 text-center polaroid">
+                            <div class="col p-1 text-center ">
 				<a href="../imagenes/esculturas/lindominus2.jpg">				     
                                 	<img src="../imagenes/esculturas/lindominus2.jpg" class="rounded" width="304" height="236">
 				</a>											  
                             </div>
-                            <div class="col p-1 text-center polaroid">
+                            <div class="col p-1 text-center ">
 				<a href="../imagenes/esculturas/mecagodzila.jpg">				     
                                 	<img src="../imagenes/esculturas/mecagodzila.jpg" class="rounded" width="304" height="236">
 				</a>
                             </div>
-                            <div class="col p-1 text-center polaroid">
+                            <div class="col p-1 text-center ">
 				<a href="../imagenes/esculturas/milo.jpg>
                                 	<img src="../imagenes/esculturas/milo.jpg" class="rounded" width="304" height="236">
 				</a>
                             </div>
-                            <div class="col p-1 text-center polaroid">
+                            <div class="col p-1 text-center ">
 				<a href="../imagenes/esculturas/minidragon.jpg">
                                 	<img src="../imagenes/esculturas/minidragon.jpg" class="rounded" width="304" height="236">
 				</a>
                             </div>
-                            <div class="col p-1 text-center polaroid">
+                            <div class="col p-1 text-center ">
 				<a href="../imagenes/esculturas/miutu.jpg">
                                 	<img src="../imagenes/esculturas/miutu.jpg" class="rounded" width="304" height="236">
 				</a>
                             </div>
-                            <div class="col p-1 text-center polaroid">
+                            <div class="col p-1 text-center ">
 				<a href="../imagenes/esculturas/oso.jpg">
                                 	<img src="../imagenes/esculturas/oso.jpg" class="rounded" width="304" height="236">
 				</a>	
                             </div>
-                            <div class="col p-1 text-center polaroid">
+                            <div class="col p-1 text-center ">
 				<a href="../imagenes/esculturas/perro.jpg">
                                 	<img src="../imagenes/esculturas/perro.jpg" class="rounded" width="304" height="236">
 				</a>
                             </div>
-                            <div class="col p-1 text-center polaroid">
+                            <div class="col p-1 text-center ">
 				<a href="../imagenes/esculturas/pigisfriends.jpg">
                                 	<img src="../imagenes/esculturas/pigisfriends.jpg" class="rounded" width="304" height="236">
 				</a>
