--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
                 width:300px;
                 height:200px;
             }
+            
+            h1 {
+  				text-shadow: 8px 8px 5px #ffffff;
+			}
 
         </style>
     </head>
