--- a/paginas/dibujos.html
+++ b/paginas/dibujos.html
@@ -37,12 +37,15 @@
   		        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   		        margin-bottom: 25px;
   								
-	        }
-			
-	        img:hover {
-  		        box-shadow: 0 5px 10px 20px rgb(247, 147, 84);
+	     }
+		img:hover {
+  		box-shadow: 0 5px 10px 20px rgb(247, 147, 84);
   				
-	         }
+	     }
+		
+	     h1 {
+  		text-shadow: 8px 8px 5px #ffffff;
+	     }	
         </style>
 
     </head>
