--- a/paginas/esculturas.html
+++ b/paginas/esculturas.html
@@ -32,6 +32,10 @@
 	   img:hover {
   		box-shadow: 0 5px 10px 20px rgb(247, 147, 84);
   	   }
+		
+	   h1 {
+  		text-shadow: 8px 8px 5px #ffffff;
+	   }	
 			
 			
 	 </style>
