--- a/paginas/esculturas.html
+++ b/paginas/esculturas.html
@@ -65,7 +65,7 @@
                     <a class="nav-link" href="dibujos.html">Dibujos</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">M&aacutes</a>
+                    <a class="nav-link" href="../paginas/dibujosGis.html">Creaciones con Gis</a>
                 </li>    
             </ul>
         </div> 
@@ -87,7 +87,7 @@
                         <a class="nav-link " href="../paginas/dibujos.html">Dibujos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link disabled" href="../paginas/dibujosGis.html">Creaciones con Gis</a>
+                        <a class="nav-link" href="../paginas/dibujosGis.html">Creaciones con Gis</a>
                     </li>
                 </ul>
             </div>
