--- a/paginas/dibujosGis.html
+++ b/paginas/dibujosGis.html
@@ -54,10 +54,11 @@
 
     </head>
     <body style="background:#ffffe6">
-        <div class="text-center" style="margin-bottom:0; background:#ccccff; border: 20px inset #b3b3ff">
+        <div class="text-center" style="margin-bottom:0; background:#ccccff; border: 20px inset #b3b3ff" >
             <h1 style="font-size:80px">Valeria's Web Site</h1>
-            <p>Bienvenido al mejor sitio web de Internet.<center><b> Imaginalo y crealo!</b></center></p>
-    	</div>
+            <h4>Bienvenido al mejor sitio web de Internet</h4>
+            <h3> Imaginalo y crealo!</h3>
+        </div>
   
    		 <div class="container-fluid">
         <h4 class ="font-weight text-center"><b>Dibujos con Gis</b></h4>
