--- a/paginas/esculturas.html
+++ b/paginas/esculturas.html
@@ -36,6 +36,10 @@
 	   h1 {
   		text-shadow: 8px 8px 5px #ffffff;
 	   }	
+	
+	   h3, h4{
+		text-shadow: 8px 8px #ffffff;
+	   }
 			
 			
 	 </style>
