--- a/paginas/dibujos.html
+++ b/paginas/dibujos.html
@@ -46,6 +46,10 @@
 	     h1 {
   		text-shadow: 8px 8px 5px #ffffff;
 	     }	
+		
+	     h3, h4{
+		text-shadow: 4px 3px #ffffff;
+	     }
         </style>
 
     </head>
