--- a/index.html
+++ b/index.html
@@ -32,8 +32,12 @@
             }
             
             h1 {
-  				text-shadow: 8px 8px 5px #ffffff;
-			}
+  		text-shadow: 8px 8px 5px #ffffff;
+	    }
+		
+	    h3, h4{
+		text-shadow: 4px 3px #ffffff;
+	   }	
 
         </style>
     </head>
