--- a/paginas/dibujos.html
+++ b/paginas/dibujos.html
@@ -3,35 +3,14 @@
     <head>
         <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
         <title>Dibujos</title>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+        
+	<link rel="stylesheet" href="../estilosValeria.css">    
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
         <style>
-            .fakeimg {
-                height: 200px;
-                background: #aaa;
-            }
-
-            .clearfix:after {
-                content: "";
-                clear: both;
-            }
-
-            /* Make the image fully responsive */
-            .carousel-inner img {
-                width: 25%;
-                height: 25%;
-            }
-
-            .imagenes img{
-                width:300px;
-                height:200px;
-            }
-            .imagenes2 div.img{
-                width:"100%";
-                height:"auto";
-            }
+            
 
             div.polaroid {
   		        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
