--- a/paginas/dibujos.html
+++ b/paginas/dibujos.html
@@ -54,7 +54,7 @@
                         <a class="nav-link" href="../paginas/esculturas.html">Esculturas</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../paginas/dibujos.html">Dibujos</a>
+                        <a class="nav-link active" href="../paginas/dibujos.html">Dibujos</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="../paginas/dibujosGis.html">Creaciones con Gis</a>
