--- a/paginas/dibujos.html
+++ b/paginas/dibujos.html
@@ -9,7 +9,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-        <style>
+        <!--<style>
             
 
             div.polaroid {
@@ -29,7 +29,7 @@
 	     h3, h4{
 		text-shadow: 4px 3px #ffffff;
 	     }
-        </style>
+        </style>-->
 
     </head>
     <body style="background:#ffffe6">
