--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
         
     </head>
-    <body>
+    <body style="background:#ffffe6">
 
         <div class="text-center" style="margin-bottom:0; background:#ccccff; border: 20px inset #b3b3ff" >
             <h1 style="font-size:80px">Valeria's Web Site</h1>
