--- a/paginas/dibujosGis.html
+++ b/paginas/dibujosGis.html
@@ -83,34 +83,50 @@
                		</ul>
             	</div>
             	<div class="col border border-5 p-5 ms-3 text-start align-center" style="background:#ccccff;">
-                	<div class="row">
+                	<!--<div class="row">-->
                     	<div class="row">
                         	<div class="col p-1 text-center">
-                            	<img src="../imagenes/dibujosGis/gis1.jpg" class="rounded" width="304" height="236">
+					<a href="../imagenes/dibujosGis/gis1.jpg">
+                            			<img src="../imagenes/dibujosGis/gis1.jpg" class="rounded" width="304" height="236">
+					</a>	
                        		</div>
                         	<div class="col p-1 text-center">
-                            	<img src="../imagenes/dibujosGis/gis4.jpg" class="rounded" width="304" height="236">
+					<a href="../imagenes/dibujosGis/gis4.jpg">
+                            			<img src="../imagenes/dibujosGis/gis4.jpg" class="rounded" width="304" height="236">
+					</a>	
                         	</div>
                         	<div class="col p-1 text-center">
-                            	<img src="../imagenes/dibujosGis/gis5.jpg" class="rounded" width="304" height="236">
+					<a href="../imagenes/dibujosGis/gis5.jpg">
+                            			<img src="../imagenes/dibujosGis/gis5.jpg" class="rounded" width="304" height="236">
+					</a>	
                         	</div>
                         	<div class="col p-1 text-center">
-                            	<img src="../imagenes/dibujosGis/gis6.jpg" class="rounded" width="304" height="236">
+					<a href="../imagenes/dibujosGis/gis6.jpg">
+                            			<img src="../imagenes/dibujosGis/gis6.jpg" class="rounded" width="304" height="236">
+					</a>	
                         	</div>
                         	<div class="col p-1 text-center">
-                            	<img src="../imagenes/dibujosGis/gis7.jpg" class="rounded" width="304" height="236">
+					<a href="../imagenes/dibujosGis/gis7.jpg">
+                            			<img src="../imagenes/dibujosGis/gis7.jpg" class="rounded" width="304" height="236">
+					</a>	
                         	</div>
                         	<div class="col p-1 text-center">
-                            	<img src="../imagenes/dibujosGis/gis8.jpg" class="rounded" width="304" height="236">
+					<a href="../imagenes/dibujosGis/gis8.jpg">
+                            			<img src="../imagenes/dibujosGis/gis8.jpg" class="rounded" width="304" height="236">
+					</a>	
                         	</div>
                         	<div class="col p-1 text-center">
-                            	<img src="../imagenes/dibujosGis/gis9.jpg" class="rounded" width="304" height="236">
+					<a href="../imagenes/dibujosGis/gis9.jpg">
+                            			<img src="../imagenes/dibujosGis/gis9.jpg" class="rounded" width="304" height="236">
+					</a>	
                         	</div>
                         	<div class="col p-1 text-center">
-                            	<img src="../imagenes/dibujosGis/gis10.jpg" class="rounded" width="304" height="236">
+					<a href="../imagenes/dibujosGis/gis10.jpg">
+                            			<img src="../imagenes/dibujosGis/gis10.jpg" class="rounded" width="304" height="236">
+					</a>	
                        		</div>
                     	</div>
-                	</div>
+                	<!--</div>-->
             	</div>
         	</div>
     	</div>
