--- a/paginas/esculturas.html
+++ b/paginas/esculturas.html
@@ -107,7 +107,9 @@
 				</a>	
                         </div>
                         <div class="col p-1 text-center polaroid">
-                            <img src="../imagenes/esculturas/miutu.jpg" class="rounded" width="304" height="236">
+				<a href="../imagenes/esculturas/miutu.jpg">
+                            		<img src="../imagenes/esculturas/miutu.jpg" class="rounded" width="304" height="236">
+				</a>	
                         </div>
                         <div class="col p-1 text-center polaroid">
 				<a href="../imagenes/esculturas/oso.jpg">
@@ -121,7 +123,7 @@
                         </div>
                         <div class="col p-1 text-center polaroid">
 				<a href="../imagenes/esculturas/pigisfriends.jpg">
-                           	<img src="../imagenes/esculturas/pigisfriends.jpg" class="rounded " width="304" height="236">
+                           		<img src="../imagenes/esculturas/pigisfriends.jpg" class="rounded " width="304" height="236">
 				</a>	
                         </div>
                     </div>
