--- a/paginas/dibujos.html
+++ b/paginas/dibujos.html
@@ -85,37 +85,37 @@
                 </div>
                 <div class="col border border-5 p-5 ms-3 text-start align-center" style="background:#ccccff;">
                     <div class="row">
-                        <div class="col p-1 text-center">
+                        <div class="col p-1 text-center polaroid">
 				<a href="../imagenes/dibujos/dibujo1.jpg">
                             		<img src="../imagenes/dibujos/dibujo1.jpg" class="rounded" width="304" height="236" class="center">
 				</a>	
                         </div>
-                        <div class="col p-1 text-center">
+                        <div class="col p-1 text-center polaroid">
 				<a href="../imagenes/dibujos/dibujo2.jpg">
                             		<img src="../imagenes/dibujos/dibujo2.jpg" class="rounded" width="304" height="236">
 				</a>	
                         </div>
-                        <div class="col p-1 text-center">
+                        <div class="col p-1 text-center polaroid">
 				<a href="../imagenes/dibujos/dibujo3.jpg">
                             		<img src="../imagenes/dibujos/dibujo3.jpg" class="rounded" width="304" height="236">
 				</a>	
                         </div>
-                        <div class="col p-1 text-center">
+                        <div class="col p-1 text-center polaroid">
 				<a href="../imagenes/dibujos/dibujo4.jpg">
                             		<img src="../imagenes/dibujos/dibujo4.jpg" class="rounded" width="304" height="236">
 				</a>	
                         </div>
-                        <div class="col p-1 text-center">
+                        <div class="col p-1 text-center polaroid">
 				<a href="../imagenes/dibujos/dibujo5.jpg">
                             		<img src="../imagenes/dibujos/dibujo5.jpg" class="rounded" width="304" height="236">
 				</a>	
                         </div>
-                        <div class="col p-1 text-center">
+                        <div class="col p-1 text-center polaroid">
 				<a href="../imagenes/dibujos/dibujo6.jpg">
                             		<img src="../imagenes/dibujos/dibujo6.jpg" class="rounded" width="304" height="236">
 				</a>	
                         </div>
-                        <div class="col p-1 text-center">
+                        <div class="col p-1 text-center polaroid">
 				<a href="../imagenes/dibujos/dibujo7.jpg">
                             		<img src="../imagenes/dibujos/dibujo7.jpg" class="rounded" width="304" height="236">
 				</a>	
