--- a/index.html
+++ b/index.html
@@ -41,7 +41,10 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="paginas/dibujosGis.html">Creaciones con Gis</a>
-                    </li>    
+                    </li>  
+		    <li class="nav-item">
+                    	<a class="nav-link " href="../paginas/videos.html">Videos</a>
+                	</li	
                 </ul>
             </div> 
         </nav>
@@ -65,6 +68,9 @@
                         <li class="nav-item">
                             <a class="nav-link " href="paginas/dibujosGis.html">Creaciones con Gis</a>
                         </li>
+			<li class="nav-item">
+                    	<a class="nav-link " href="../paginas/videos.html">Videos</a>
+                	</li    
                     </ul>
                 </div>
                 <div class="col p-2 ms-3 text-start" style="margin-right:10px; background:#ccccff" >
