--- a/paginas/dibujos.html
+++ b/paginas/dibujos.html
@@ -58,7 +58,10 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="../paginas/dibujosGis.html">Creaciones con Gis</a>
-                    </li>    
+                    </li> 
+		    <li class="nav-item">
+                    	<a class="nav-link " href="../paginas/videos.html">Videos</a>
+                	</li	
                 </ul>
             </div> 
         </nav>
@@ -81,6 +84,9 @@
                         <li class="nav-item">
                             <a class="nav-link " href="../paginas/dibujosGis.html">Creaciones con Gis</a>
                         </li>
+			<li class="nav-item">
+                    	<a class="nav-link " href="../paginas/videos.html">Videos</a>
+                	</li    
                     </ul>
                 </div>
                 <div class="col border border-5 p-5 ms-3 text-start align-center" style="background:#ccccff;">
