--- a/paginas/dibujosGis.html
+++ b/paginas/dibujosGis.html
@@ -58,9 +58,12 @@
                   	  <a class="nav-link" href="../paginas/dibujos.html">Dibujos</a>
                		</li>
                 	<li class="nav-item">
-                    	<a class="nav-link active" href="../paginas/dibujosGis.html">Creaciones con Gis</a>
+                    	   <a class="nav-link active" href="../paginas/dibujosGis.html">Creaciones con Gis</a>
+                	</li
+			<li class="nav-item">
+                    	    <a class="nav-link active" href="../paginas/videos.html">Videos</a>
                 	</li>    
-           		</ul>
+           	</ul>
        		</div> 
     	</nav>
 
@@ -80,6 +83,9 @@
                     	<li class="nav-item">
                         	<a class="nav-link active " href="../paginas/dibujosGis.html">Creaciones con Gis</a>
                     	</li>
+			<li class="nav-item">
+                    		<a class="nav-link active" href="../paginas/videos.html">Videos</a>
+                	</li	
                		</ul>
             	</div>
             	<div class="col border border-5 p-5 ms-3 text-start align-center" style="background:#ccccff;">
