--- a/paginas/esculturas.html
+++ b/paginas/esculturas.html
@@ -38,7 +38,10 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="../paginas/dibujosGis.html">Creaciones con Gis</a>
-                </li>    
+                </li> 
+		<li class="nav-item">
+                    	<a class="nav-link active" href="../paginas/videos.html">Videos</a>
+                </li    
             </ul>
         </div> 
     </nav>
@@ -61,6 +64,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="../paginas/dibujosGis.html">Creaciones con Gis</a>
                     </li>
+		    <li class="nav-item">
+                    	<a class="nav-link active" href="../paginas/videos.html">Videos</a>
+                    </li		
                 </ul>
             </div>
             <div class="col border border-5 p-2 ms-3 text-start align-center" style="margin-right:10px; background:#ccccff;">
