--- a/paginas/dibujos.html
+++ b/paginas/dibujos.html
@@ -91,7 +91,12 @@
                 </div>
                 <div class="col border border-5 p-5 ms-3 text-start align-center" style="background:#ccccff;">
                     <div class="row">
-                        <div class="col p-1 text-center polaroid">
+                            <div class="col p-1 text-center polaroid">
+                        	<a href="../imagenes/dibujos/dibujo.jpg">
+                            		<img src="../imagenes/dibujos/dibujo.jpg" class="rounded" width="304" height="236" class="center">
+                            	</a>	
+                            </div	
+			    <div class="col p-1 text-center polaroid">
 				<a href="../imagenes/dibujos/dibujo1.jpg">
                             		<img src="../imagenes/dibujos/dibujo1.jpg" class="rounded" width="304" height="236" class="center">
 				</a>	
