--- a/paginas/videos.html
+++ b/paginas/videos.html
@@ -50,28 +50,31 @@
    		<div class="container-fluid" style="margin-top:30px">
         	<div class="row">
             	<div class="col-1 p-1">
-                	<ul class="nav nav-pills flex-column">
-                    	<li class="nav-item">
-                        	<a class="nav-link " href="../index.html">Inicio</a>
-                    	</li>
-                    	<li class="nav-item">
-                        	<a class="nav-link " href="../paginas/esculturas.html">Esculturas</a>
-                    	</li>
-                    	<li class="nav-item">
-                        	<a class="nav-link " href="../paginas/dibujos.html">Dibujos</a>
-                    	</li>
-                    	<li class="nav-item">
-                        	<a class="nav-link  " href="../paginas/dibujosGis.html">Dibujos con Gis</a>
-                    	</li>
-                    	<li class="nav-item">
-                        	<a class="nav-link active " href="../paginas/videoss.html">Videos</a>
-                    	</li>
+			<ul class="nav nav-pills flex-column">
+                    		<li class="nav-item">
+                        		<a class="nav-link " href="../index.html">Inicio</a>
+                    		</li>
+                    		<li class="nav-item">
+                        		<a class="nav-link " href="../paginas/esculturas.html">Esculturas</a>
+                    		</li>
+                    		<li class="nav-item">
+                        		<a class="nav-link " href="../paginas/dibujos.html">Dibujos</a>
+                    		</li>
+                    		<li class="nav-item">
+                        		<a class="nav-link  " href="../paginas/dibujosGis.html">Dibujos con Gis</a>
+                    		</li>
+                    		<li class="nav-item">
+                        		<a class="nav-link active " href="../paginas/videoss.html">Videos</a>
+                    		</li>
                		</ul>
             	</div>
             	<div class="col border border-5 p-5 ms-3 text-start align-center" style="background:#ccccff;">
                 	<div class="row">
                     	<div class="row">
-                        	<div class="col p-1 text-center polaroid">
+				<div class="p-5">
+					<h1><b>En construcci&oacuten</b></h1>
+				</div>
+                        	<!--<div class="col p-1 text-center polaroid">
                         		<a href="../imagenes/">
                             		<img src="../imagenes/dibujosGis/" class="rounded" width="304" height="236">
                             	</a>	
@@ -120,7 +123,7 @@
                         		<a href="../imagenes/">
                             		<img src="../imagenes/" class="rounded" width="304" height="236">
                             	</a>	
-                       		</div>
+                       		</div>-->
                     	</div>
                 	</div>
             	</div>
