--- a/paginas/esculturas.html
+++ b/paginas/esculturas.html
@@ -40,7 +40,7 @@
                     <a class="nav-link" href="../paginas/dibujosGis.html">Creaciones con Gis</a>
                 </li> 
 		<li class="nav-item">
-                    	<a class="nav-link active" href="../paginas/videos.html">Videos</a>
+                    	<a class="nav-link " href="../paginas/videos.html">Videos</a>
                 </li    
             </ul>
         </div> 
@@ -65,7 +65,7 @@
                         <a class="nav-link" href="../paginas/dibujosGis.html">Creaciones con Gis</a>
                     </li>
 		    <li class="nav-item">
-                    	<a class="nav-link active" href="../paginas/videos.html">Videos</a>
+                    	<a class="nav-link " href="../paginas/videos.html">Videos</a>
                     </li		
                 </ul>
             </div>
