--- a/paginas/dibujosGis.html
+++ b/paginas/dibujosGis.html
@@ -61,7 +61,7 @@
                     	   <a class="nav-link active" href="../paginas/dibujosGis.html">Creaciones con Gis</a>
                 	</li
 			<li class="nav-item">
-                    	    <a class="nav-link active" href="../paginas/videos.html">Videos</a>
+                    	    <a class="nav-link " href="../paginas/videos.html">Videos</a>
                 	</li>    
            	</ul>
        		</div> 
@@ -84,7 +84,7 @@
                         	<a class="nav-link active " href="../paginas/dibujosGis.html">Creaciones con Gis</a>
                     	</li>
 			<li class="nav-item">
-                    		<a class="nav-link active" href="../paginas/videos.html">Videos</a>
+                    		<a class="nav-link " href="../paginas/videos.html">Videos</a>
                 	</li	
                		</ul>
             	</div>
