--- a/paginas/videos.html
+++ b/paginas/videos.html
@@ -71,7 +71,7 @@
             	<div class="col border border-5 p-5 ms-3 text-start align-center" style="background:#ccccff;">
                 	<div class="row">
                     	<div class="row">
-				<div class="p-5">
+				<div class="p-5 text-center">
 					<h1><b>En construcci&oacuten</b></h1>
 				</div>
                         	<!--<div class="col p-1 text-center polaroid">
