--- a/paginas/esculturas.html
+++ b/paginas/esculturas.html
@@ -72,6 +72,11 @@
             <div class="col border border-5 p-2 ms-3 text-start align-center" style="margin-right:10px; background:#ccccff;">
                 <div class="row p-3">
                     <div class="row">
+			<div class="col p-1 text-center polaroid">
+                            <a href="../imagenes/esculturas/esculturaraptor.jpg"  >
+                            	<img src="../imagenes/esculturas/esculturaraptor.jpg" class="rounded" width="304" height="236" class="center" >
+                            </a>
+                        </div>    
                         <div class="col p-1 text-center polaroid">
                             <a href="../imagenes/esculturas/cocodrilo.jpg"  >
                             	<img src="../imagenes/esculturas/cocodrilo.jpg" class="rounded" width="304" height="236" class="center" >
