--- a/paginas/esculturas.html
+++ b/paginas/esculturas.html
@@ -143,7 +143,7 @@
                             	<img src="../imagenes/esculturas/oso.jpg" class="rounded" width="304" height="236">
                             </a>	
                         </div>
-                        <div class="col p-1 text-center polaroid border border-danger">
+                        <div class="col p-1 text-center polaroid">
                         	<a href="../imagenes/esculturas/perro.jpg">
                             	<img src="../imagenes/esculturas/perro.jpg" class="rounded" width="304" height="236">
                             </a>	
