--- a/paginas/videos.html
+++ b/paginas/videos.html
@@ -50,81 +50,42 @@
    		<div class="container-fluid" style="margin-top:30px">
         	<div class="row">
             	<div class="col-1 p-1">
-			<ul class="nav nav-pills flex-column">
-                    		<li class="nav-item">
-                        		<a class="nav-link " href="../index.html">Inicio</a>
-                    		</li>
-                    		<li class="nav-item">
-                        		<a class="nav-link " href="../paginas/esculturas.html">Esculturas</a>
-                    		</li>
-                    		<li class="nav-item">
-                        		<a class="nav-link " href="../paginas/dibujos.html">Dibujos</a>
-                    		</li>
-                    		<li class="nav-item">
-                        		<a class="nav-link  " href="../paginas/dibujosGis.html">Dibujos con Gis</a>
-                    		</li>
-                    		<li class="nav-item">
-                        		<a class="nav-link active " href="../paginas/videoss.html">Videos</a>
-                    		</li>
+                	<ul class="nav nav-pills flex-column">
+                    	<li class="nav-item">
+                        	<a class="nav-link " href="../index.html">Inicio</a>
+                    	</li>
+                    	<li class="nav-item">
+                        	<a class="nav-link " href="../paginas/esculturas.html">Esculturas</a>
+                    	</li>
+                    	<li class="nav-item">
+                        	<a class="nav-link " href="../paginas/dibujos.html">Dibujos</a>
+                    	</li>
+                    	<li class="nav-item">
+                        	<a class="nav-link  " href="../paginas/dibujosGis.html">Dibujos con Gis</a>
+                    	</li>
+                    	<li class="nav-item">
+                        	<a class="nav-link active " href="../paginas/videoss.html">Videos</a>
+                    	</li>
                		</ul>
             	</div>
-            	<div class="col border border-5 p-5 ms-3 text-start align-center" style="background:#ccccff;">
-			<div class="p-5 text-center">
-					<h1><b>En construcci&oacuten</b></h1>
-				</div>
-                	<div class="row">
-                    	<div class="row">
-				
-                        	<!--<div class="col p-1 text-center polaroid">
-                        		<a href="../imagenes/">
-                            		<img src="../imagenes/dibujosGis/" class="rounded" width="304" height="236">
-                            	</a>	
+            	<div class="col border border-5 p-5 ms-3" style="background:#ccccff;">
+                	<div class="row align-center">
+                	   	<div class="row">
+                    		<div class="col p-3 text-center polaroid">
+                        		<video width="80%" controls>
+ 									<source src="../imagenes/video/Figuras hechas de plastilina.mp4" type="video/mp4">
+								</video>	
                        		</div>
-                        	<div class="col p-1 text-center polaroid">
-                        		<a href="../imagenes/">
-                            		<img src="../imagenes/" class="rounded" width="304" height="236">
-                            	</a>	
-                        	</div>
-                        	<div class="col p-1 text-center polaroid">
-                        		<a href="../imagenes/g">
-                            		<img src="../imagenes/g" class="rounded" width="304" height="236">
-                            	</a>	
-                        	</div>
-                        	<div class="col p-1 text-center polaroid">
-                        		<a href="../imagenes/">
-                            		<img src="../imagenes/" class="rounded" width="304" height="236">
-                            	</a>	
-                        	</div>
-                        	<div class="col p-1 text-center polaroid">
-                        		<a href="../imagenes/">
-                            		<img src="../imagenes/g" class="rounded" width="304" height="236">
-                            	</a>	
-                        	</div>
-                        	<div class="col p-1 text-center polaroid">
-                        		<a href="../imagenes/">
-                            		<img src="../imagenes/" class="rounded" width="304" height="236">
-                            	</a>	 
-                        	</div>
-                        	<div class="col p-1 text-center polaroid">
-                        		<a href="../imagenes/">
-                            		<img src="../imagenes/" class="rounded" width="304" height="236">
-                            	</a>	
-                        	</div>
-                        	<div class="col p-1 text-center polaroid">
-                        		<a href="../imagenes/">
-                            		<img src="../imagenes/" class="rounded" width="304" height="236">
-                            		</a>
-                        	</div>
-                        	<div class="col p-1 text-center polaroid">
-                        		<a href="../imagenes/dibujosGis/gis9.jpg">
-                            		<img src="../imagenes/dibujosGis/gis9.jpg" class="rounded" width="304" height="236">
-                            	</a>	
-                        	</div>
-                        	<div class="col p-1 text-center polaroid">
-                        		<a href="../imagenes/">
-                            		<img src="../imagenes/" class="rounded" width="304" height="236">
-                            	</a>	
-                       		</div>-->
+                        	<div class="col p-3 text-center polaroid">
+                        		<video width="80%"  controls>
+ 									<source src="../imagenes/video/MOV_0573.mp4" type="video/mp4">
+								</video>	
+                       		</div>
+                       		<div class="col p-3 text-center polaroid">
+                        		<video width="80%"  controls>
+ 									<source src="../imagenes/video/MOV_0574.mp4" type="video/mp4">
+								</video>	
+                       		</div>
                     	</div>
                 	</div>
             	</div>
