--- a/paginas/videos.html
+++ b/paginas/videos.html
@@ -79,8 +79,23 @@
                        		<div class="col p-3 text-center polaroid">
                         		<video width="80%"  controls>
  									<source src="../imagenes/video/MOV_0574.mp4" type="video/mp4" >
-								</video>	
+					</video>	
                        		</div>
+				<div class="col p-3 text-center polaroid">
+                        		<video width="80%"  controls>
+ 									<source src="../imagenes/video/Like_6947423029109142140.mp4" type="video/mp4">
+					</video>	
+                       		</div>
+                       		<div class="col p-3 text-center polaroid">
+                        		<video width="80%"  controls>
+ 									<source src="../imagenes/video/Like_6953338444616249980.mp4" type="video/mp4">
+					</video>	
+                       		</div>
+                       		<div class="col p-3 text-center polaroid">
+                        		<video width="80%"  controls>
+ 									<source src="../imagenes/video/Like_6962330714564670076.mp4" type="video/mp4">
+					</video>	
+                       		</div>	
                     	</div>
                 	</div>
             	</div>
