--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         <a class="nav-link" href="paginas/dibujosGis.html">Creaciones con Gis</a>
                     </li>  
 		    <li class="nav-item">
-                    	<a class="nav-link " href="../paginas/videos.html">Videos</a>
+                    	<a class="nav-link " href="paginas/videos.html">Videos</a>
                 	</li	
                 </ul>
             </div> 
@@ -69,7 +69,7 @@
                             <a class="nav-link " href="paginas/dibujosGis.html">Creaciones con Gis</a>
                         </li>
 			<li class="nav-item">
-                    	<a class="nav-link " href="../paginas/videos.html">Videos</a>
+                    	<a class="nav-link " href="paginas/videos.html">Videos</a>
                 	</li    
                     </ul>
                 </div>
