--- a/paginas/videos.html
+++ b/paginas/videos.html
@@ -9,6 +9,9 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+	    
+	<!-- script para font awsome -->
+	<script src="https://kit.fontawesome.com/ada7be5b02.js" crossorigin="anonymous"></script>    
         
  
 
@@ -21,7 +24,7 @@
     </div>
   
    		 <div class="container-fluid">
-        <h4 class ="font-weight text-center"><b>Videos</b></h4>
+        <h4 class ="font-weight text-center"><b><i class="fas fa-photo-video"></i> Videos</b></h4>
     	</div>
 
     	<nav class="navbar navbar-expand-sm bg-dark navbar-dark my-2">
