--- a/paginas/esculturas.html
+++ b/paginas/esculturas.html
@@ -21,7 +21,7 @@
     </div>
   
     <div class="container-fluid">
-        <h4 class ="font-weight text-center"><b>Galeria de Esculturas.</b></h4>
+        <h4 class ="font-weight text-center"><b><i class="fa-solid fa-dragon"></i>  Galeria de Esculturas.</b></h4>
     </div>
 
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark my-2">
