--- a/paginas/dibujosGis.html
+++ b/paginas/dibujosGis.html
@@ -23,7 +23,7 @@
         </div>
   
    		 <div class="container-fluid">
-        <h4 class ="font-weight text-center"><b>Dibujos con Gis  <i class="fas fa-magic"></i</b></h4>
+			 <h4 class ="font-weight text-center"><b>Dibujos con Gis  <i class="fas fa-magic"></i></b></h4>
     	</div>
 
     	<nav class="navbar navbar-expand-sm bg-dark navbar-dark my-2">
