--- a/paginas/videos.html
+++ b/paginas/videos.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
-        <title>Dibujos con Gis</title>
+        <title>Videos</title>
         
         <link rel="stylesheet" href="../estilosValeria.css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
