--- a/paginas/dibujos.html
+++ b/paginas/dibujos.html
@@ -10,6 +10,8 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
         
+        <script src="https://kit.fontawesome.com/ada7be5b02.js" crossorigin="anonymous"></script>
+        
 
     </head>
     <body style="background:#ffffe6">
@@ -20,7 +22,7 @@
     </div>
   
     <div class="container-fluid">
-        <h4 class ="font-weight text-center"><b>Galeria de Dibujos.</b></h4>
+        <h4 class ="font-weight text-center"><b><i class="fas fa-edit"></i> Galeria de Dibujos.</b></h4>
     </div>
 
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark my-2">
