--- a/paginas/esculturas.html
+++ b/paginas/esculturas.html
@@ -24,7 +24,7 @@
     </div>
   
     <div class="container-fluid">
-        <h4 class ="font-weight text-center"><b><i class="fa-solid fa-paintbrush-pencil"></i>  Galeria de Esculturas.</b></h4>
+        <h4 class ="font-weight text-center"><b><i class="fas fa-cat"></i>  Galeria de Esculturas  <i class="fas fa-cat"></i></b></h4>
     </div>
 
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark my-2">
