--- a/paginas/videos.html
+++ b/paginas/videos.html
@@ -67,7 +67,7 @@
                         	<a class="nav-link  " href="../paginas/dibujosGis.html">Dibujos con Gis</a>
                     	</li>
                     	<li class="nav-item">
-                        	<a class="nav-link active " href="../paginas/videoss.html">Videos</a>
+                        	<a class="nav-link active " href="../paginas/videos.html">Videos</a>
                     	</li>
                		</ul>
             	</div>
