--- a/index.html
+++ b/index.html
@@ -39,12 +39,15 @@
                     <li class="nav-item">
                         <a class="nav-link" href="paginas/dibujos.html">Dibujos</a>
                     </li>
+		    <li class="nav-item">
+                        <a class="nav-link" href="paginas/dibujosDigitales.html">Dibujos Digitales</a>
+                    </li>	
                     <li class="nav-item">
                         <a class="nav-link" href="paginas/dibujosGis.html">Creaciones con Gis</a>
                     </li>  
 		    <li class="nav-item">
                     	<a class="nav-link " href="paginas/videos.html">Videos</a>
-                	</li	
+                    </li	
                 </ul>
             </div> 
         </nav>
@@ -65,6 +68,9 @@
                         <li class="nav-item">
                             <a class="nav-link " href="paginas/dibujos.html">Dibujos</a>
                         </li>
+			<li class="nav-item">
+                       	     <a class="nav-link" href="paginas/dibujosDigitales.html">Dibujos Digitales</a>
+                        </li>    
                         <li class="nav-item">
                             <a class="nav-link " href="paginas/dibujosGis.html">Creaciones con Gis</a>
                         </li>
