--- a/paginas/dibujosDigitales.html
+++ b/paginas/dibujosDigitales.html
@@ -39,6 +39,9 @@
                     <a class="nav-link active" href="../paginas/dibujos.html">Dibujos</a>
                 </li>
                 <li class="nav-item">
+                        <a class="nav-link" href="paginas/dibujosDigitales.html">Dibujos Digitales</a>
+                    </li>
+                <li class="nav-item">
                     <a class="nav-link" href="../paginas/dibujosGis.html">Creaciones con Gis</a>
                 </li> 
                 <li class="nav-item">
@@ -62,6 +65,9 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" href="../paginas/dibujos.html">Dibujos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="paginas/dibujosDigitales.html">Dibujos Digitales</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="../paginas/dibujosGis.html">Creaciones con Gis</a>
