--- a/paginas/dibujos.html
+++ b/paginas/dibujos.html
@@ -67,6 +67,9 @@
                         <a class="nav-link active" href="../paginas/dibujos.html">Dibujos</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="paginas/dibujosDigitales.html">Dibujos Digitales</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="../paginas/dibujosGis.html">Creaciones con Gis</a>
                     </li>
                     <li class="nav-item">
