--- a/paginas/dibujosGis.html
+++ b/paginas/dibujosGis.html
@@ -39,6 +39,9 @@
                 	<li class="nav-item">
                   	  <a class="nav-link" href="../paginas/dibujos.html">Dibujos</a>
                		</li>
+			<li class="nav-item">
+                    	   <a class="nav-link" href="paginas/dibujosDigitales.html">Dibujos Digitales</a>
+               		</li>
                 	<li class="nav-item">
                     	   <a class="nav-link active" href="../paginas/dibujosGis.html">Creaciones con Gis</a>
                 	</li
@@ -62,6 +65,9 @@
                     	<li class="nav-item">
                         	<a class="nav-link " href="../paginas/dibujos.html">Dibujos</a>
                     	</li>
+			<li class="nav-item">
+                   		<a class="nav-link" href="paginas/dibujosDigitales.html">Dibujos Digitales</a>
+                	</li>	
                     	<li class="nav-item">
                         	<a class="nav-link active " href="../paginas/dibujosGis.html">Creaciones con Gis</a>
                     	</li>
