--- a/paginas/esculturas.html
+++ b/paginas/esculturas.html
@@ -40,12 +40,15 @@
                 <li class="nav-item">
                     <a class="nav-link" href="dibujos.html">Dibujos</a>
                 </li>
+		<li class="nav-item">
+                    <a class="nav-link" href="paginas/dibujosDigitales.html">Dibujos Digitales</a>
+                </li>    
                 <li class="nav-item">
                     <a class="nav-link" href="../paginas/dibujosGis.html">Creaciones con Gis</a>
                 </li> 
                 <li class="nav-item">
                     	<a class="nav-link " href="../paginas/videos.html">Videos</a>
-                	</li   
+                </li   
             </ul>
         </div> 
     </nav>
@@ -64,6 +67,9 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link " href="../paginas/dibujos.html">Dibujos</a>
+                    </li>
+		    <li class="nav-item">
+                    	<a class="nav-link" href="paginas/dibujosDigitales.html">Dibujos Digitales</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link " href="../paginas/dibujosGis.html">Creaciones con Gis</a>
