--- a/paginas/videos.html
+++ b/paginas/videos.html
@@ -35,16 +35,19 @@
         	<div class="collapse navbar-collapse" id="collapsibleNavbar">
             	<ul class="navbar-nav">
                 	<li class="nav-item">
-                  	  <a class="nav-link" href="../paginas/esculturas.html">Esculturas</a>
+                  	 	 <a class="nav-link" href="../paginas/esculturas.html">Esculturas</a>
                		</li>
                 	<li class="nav-item">
-                  	  <a class="nav-link" href="../paginas/dibujos.html">Dibujos</a>
+                  	 	 <a class="nav-link" href="../paginas/dibujos.html">Dibujos</a>
                		</li>
-                	<li class="nav-item">
-                    	<a class="nav-link " href="../paginas/dibujosGis.html">Creaciones con Gis</a>
+			<li class="nav-item">
+                    		<a class="nav-link" href="paginas/dibujosDigitales.html">Dibujos Digitales</a>
                 	</li>
                 	<li class="nav-item">
-                    	<a class="nav-link active" href="../paginas/videos.html">Videos</a>
+                    		<a class="nav-link " href="../paginas/dibujosGis.html">Creaciones con Gis</a>
+                	</li>
+                	<li class="nav-item">
+                    		<a class="nav-link active" href="../paginas/videos.html">Videos</a>
                 	</li>    
            		</ul>
        		</div> 
@@ -63,6 +66,9 @@
                     	<li class="nav-item">
                         	<a class="nav-link " href="../paginas/dibujos.html">Dibujos</a>
                     	</li>
+			<li class="nav-item">
+                   		 <a class="nav-link" href="paginas/dibujosDigitales.html">Dibujos Digitales</a>
+                	</li>	
                     	<li class="nav-item">
                         	<a class="nav-link  " href="../paginas/dibujosGis.html">Dibujos con Gis</a>
                     	</li>
