--- a/paginas/dibujosGis.html
+++ b/paginas/dibujosGis.html
@@ -40,7 +40,7 @@
                   	  <a class="nav-link" href="../paginas/dibujos.html">Dibujos</a>
                		</li>
 			<li class="nav-item">
-                    	   <a class="nav-link" href="paginas/dibujosDigitales.html">Dibujos Digitales</a>
+                    	   <a class="nav-link" href="../paginas/dibujosDigitales.html">Dibujos Digitales</a>
                		</li>
                 	<li class="nav-item">
                     	   <a class="nav-link active" href="../paginas/dibujosGis.html">Creaciones con Gis</a>
@@ -66,7 +66,7 @@
                         	<a class="nav-link " href="../paginas/dibujos.html">Dibujos</a>
                     	</li>
 			<li class="nav-item">
-                   		<a class="nav-link" href="paginas/dibujosDigitales.html">Dibujos Digitales</a>
+                   		<a class="nav-link" href="../paginas/dibujosDigitales.html">Dibujos Digitales</a>
                 	</li>	
                     	<li class="nav-item">
                         	<a class="nav-link active " href="../paginas/dibujosGis.html">Creaciones con Gis</a>
