--- a/paginas/esculturas.html
+++ b/paginas/esculturas.html
@@ -41,7 +41,7 @@
                     <a class="nav-link" href="dibujos.html">Dibujos</a>
                 </li>
 		<li class="nav-item">
-                    <a class="nav-link" href="paginas/dibujosDigitales.html">Dibujos Digitales</a>
+                    <a class="nav-link" href="../paginas/dibujosDigitales.html">Dibujos Digitales</a>
                 </li>    
                 <li class="nav-item">
                     <a class="nav-link" href="../paginas/dibujosGis.html">Creaciones con Gis</a>
@@ -69,7 +69,7 @@
                         <a class="nav-link " href="../paginas/dibujos.html">Dibujos</a>
                     </li>
 		    <li class="nav-item">
-                    	<a class="nav-link" href="paginas/dibujosDigitales.html">Dibujos Digitales</a>
+                    	<a class="nav-link" href="../paginas/dibujosDigitales.html">Dibujos Digitales</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link " href="../paginas/dibujosGis.html">Creaciones con Gis</a>
