--- a/paginas/videos.html
+++ b/paginas/videos.html
@@ -41,7 +41,7 @@
                   	 	 <a class="nav-link" href="../paginas/dibujos.html">Dibujos</a>
                		</li>
 			<li class="nav-item">
-                    		<a class="nav-link" href="paginas/dibujosDigitales.html">Dibujos Digitales</a>
+                    		<a class="nav-link" href="../paginas/dibujosDigitales.html">Dibujos Digitales</a>
                 	</li>
                 	<li class="nav-item">
                     		<a class="nav-link " href="../paginas/dibujosGis.html">Creaciones con Gis</a>
@@ -67,7 +67,7 @@
                         	<a class="nav-link " href="../paginas/dibujos.html">Dibujos</a>
                     	</li>
 			<li class="nav-item">
-                   		 <a class="nav-link" href="paginas/dibujosDigitales.html">Dibujos Digitales</a>
+                   		 <a class="nav-link" href="../paginas/dibujosDigitales.html">Dibujos Digitales</a>
                 	</li>	
                     	<li class="nav-item">
                         	<a class="nav-link  " href="../paginas/dibujosGis.html">Dibujos con Gis</a>
