--- a/paginas/dibujosDigitales.html
+++ b/paginas/dibujosDigitales.html
@@ -36,10 +36,10 @@
                     <a class="nav-link" href="../paginas/esculturas.html">Esculturas</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" href="../paginas/dibujos.html">Dibujos</a>
+                    <a class="nav-link" href="../paginas/dibujos.html">Dibujos</a>
                 </li>
                 <li class="nav-item">
-                        <a class="nav-link" href="../paginas/dibujosDigitales.html">Dibujos Digitales</a>
+                        <a class="nav-link active" href="../paginas/dibujosDigitales.html">Dibujos Digitales</a>
                     </li>
                 <li class="nav-item">
                     <a class="nav-link" href="../paginas/dibujosGis.html">Creaciones con Gis</a>
@@ -64,9 +64,9 @@
                         <a class="nav-link " href="../paginas/esculturas.html">Esculturas</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="../paginas/dibujos.html">Dibujos</a>
+                        <a class="nav-link" href="../paginas/dibujos.html">Dibujos</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item active">
                         <a class="nav-link" href="../paginas/dibujosDigitales.html">Dibujos Digitales</a>
                     </li>
                     <li class="nav-item">
